main.css
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,700');

body {
    padding: 0;
    margin: 0;
    font-family: 'IBM Plex Sans', sans-serif;
    color: whitesmoke;
    background: #222;
}

h1 {
    font-weight: 700;
}

p {
    font-weight: 400;
}

#bus {
    padding: 10px 20px;
}

input {
    text-align: center;
    border: 0;
    background: #333;
    color: whitesmoke;
    padding: 15px 0;
    font-size: 16px;
}

button {
    border: 0;
    color: whitesmoke;
    background: #222;
    padding: 15px 0;
}

#container {
    width: 95%;
    margin: auto;
}

input,button{
    width: 100%;
}

#version{
    text-align: center;
    font-weight: 300;
    background: #c0392b;
    margin: 0;
    padding: 10px;
}

/* #form{
    display: grid;
    grid-template-columns: auto 24%;
} */

/* THIS SECTION IS THE ID GIVEN TO THE H1 IN BUS.JS, IT USES THE LOAD DATA AND GAVE IT THE ID */
#sea {
    color: #2ecc71;
}

#sda {
    color: #e74c3c;
}

#noload {
    color: #f1c40f;
}

#bus:nth-of-type(2n) {
    background: rgba(0, 0, 0, 0.15);
}

